--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,6 +99,11 @@ body{
 color: white;
 }
 
+.ts-1,.ts-2{
+    font-size:60px;
+    margin-left:30rem;
+}
+
 .v-1{
 z-index:-1;
 height: 40rem;
@@ -291,9 +296,14 @@ display: none;
     }
 }
 
-
-
+@media  screen and (max-width:700px) {
+    .ts-1,ts-2
+        font-size:30px;
+        margin-left:10rem;
+    }
+}
     @media  screen and (max-width:500px) {
+        
         .footer{
             height: fit-content;
             width:100% ;
